@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-06-16T16:13:00Z",
-  "count" : 6,
+  "timestamp" : "2022-06-30T08:13:22Z",
+  "count" : 4,
   "count_minmax" : [ 2, 6 ],
-  "count_decinc" : [ -0, +6 ],
+  "count_decinc" : [ -2, +6 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
