@@ -1,10 +1,10 @@
 {
-  "count": 17,
+  "count": 15,
   "uniques": 1,
   "views": [
     {
       "timestamp": "2022-06-16T00:00:00Z",
-      "count": 6,
+      "count": 4,
       "uniques": 1
     },
     {
