@@ -1,3 +1,10 @@
+2022-06-30T08:13:22Z:
+* notice: last 14d: unq all: 1 15
+* notice: prev accum: outdated-unq outdated-all / unq all: 26 410 / 31 427
+* notice: next accum: outdated-unq outdated-all / unq all: 26 410 / 31 425
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -2 / +1 +6 -0 -2 / 1 4
+* notice: removed / changed dates: [] / [2022-06-16]
+
 2022-06-28T08:13:49Z:
 * notice: last 14d: unq all: 1 17
 * notice: prev accum: outdated-unq outdated-all / unq all: 26 410 / 30 424
